--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		<title></title>
 		<link rel="Shortcut Icon" href="favicon.ico" type="image/x-icon" />
 		<!--build:css css/styles.min.css-->
-		<link rel="stylesheet" href="css/styles.css" type="text/css" media="screen,projection" />
-		<link rel="stylesheet" href="css/print.css" type="text/css" media="print" />
+		<link rel="stylesheet" href="assets/prod/css/style.css" type="text/css" media="screen,projection" />
+		<link rel="stylesheet" href="assets/prod/css/print.css" type="text/css" media="print" />
 		<!--endbuild-->
 		<link rel="index" title="" href="" />
 		<!--[if lt IE 9 ]>
@@ -20,8 +20,9 @@
 	</head>
 	<body class="" lang="fr-FR">
 		<header id="primary-header">
+			<h1 role="banner">logo</h1>
 		</header>
-		<div class="page">
+		<div class="page-inner">
 			<header class="banner">
 				<p>Banner</p>
 				<nav class="pagenav">
@@ -31,17 +32,17 @@
 				</nav>
 			</header>
 			<main class="main">
-			<section id="content">
+			<section id="content" class="content">
 				<h1>This is a gulp starter!</h1>
 			</section>
-			<aside class="summary">
+			<aside class="sidebar">
 				<p>Summary</p>
 			</aside>
 			<article class="content">
 				<p>Main Content</p>
 			</article>
 			</main>
-			<footer class="contentinfo">
+			<footer class="contentinfo" role="banner">
 				<p>Content Info</p>
 			</footer>
 		</div>
